--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
       <url>http://github.com/adrian-wang</url>
       <email>daoyuan.wang@intel.com</email>
     </developer>
+    <developer>
+    </developer>
   </developers>
 
   <licenses>
