--- a/pom.xml
+++ b/pom.xml
@@ -198,10 +198,10 @@
 
   <build>
     <plugins>
-      <!--plugin>
+      <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>2.10</version>
+        <version>2.15</version>
         <executions>
           <execution>
             <goals>
@@ -210,7 +210,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin-->
+      </plugin>
       <plugin>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
