--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
 <distributionManagement>
   <snapshotRepository>
      <id>apache-snapshots</id>
-     <name>internal-Snapshots</name>
-     <url>http://10.0.2.52:8081/nexus/content/repositories/apache-snapshots/</url>
+     <name>Apache Snapshots</name>
+     <url>http://10.0.0.174:8080/nexus/content/repositories/apache-snapshots</url>
   </snapshotRepository>
   <repository>
-     <id>deployment</id>
-     <name>Internal Releases</name>
-     <url>http://10.0.2.52:8081/nexus/content/repositories/central/</url>
+     <id>central</id>
+     <name>Central</name>
+     <url>http://10.0.0.174:8080/nexus/content/repositories/central/</url>
   </repository>
 </distributionManagement>
 
