--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <scala.version>2.10.4</scala.version>
     <scala.binary.version>2.10</scala.binary.version>
     <spark.version>1.5.0</spark.version>
+    <spark.internal.version>temp_version-SNAPSHOT</spark.internal.version>
   </properties>
 
   <repositories>
@@ -153,48 +154,56 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-catalyst_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-catalyst_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-hive_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-hive_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <!--<version>${spark.version}</version>-->
+      <version>${spark.internal.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
